--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
 		"dev": "next dev -p 9999",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"email": "email dev --port 4000"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
@@ -52,6 +58,7 @@
 		"react-dom": "^18",
 		"react-email": "2.1.2",
 		"react-hook-form": "^7.51.3",
+		"react-icons": "^5.2.1",
 		"react-resizable-panels": "^2.0.19",
 		"resend": "^3.2.0",
 		"sonner": "^1.4.41",
