--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RESEND_API_KEY=re_732KJ3em_21Vu3jkWV1ZtG22rxLcyYdAH
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+VERCEL_URL="http://localhost:9999"
