--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
 		"email": "email dev --port 4000"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.5.2",
-		"@fortawesome/free-brands-svg-icons": "^6.5.2",
-		"@fortawesome/free-regular-svg-icons": "^6.5.2",
-		"@fortawesome/free-solid-svg-icons": "^6.5.2",
-		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
@@ -44,11 +39,22 @@
 		"@radix-ui/react-toggle-group": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-email/components": "0.0.17",
+		"@tiptap/extension-color": "^2.4.0",
+		"@tiptap/extension-link": "^2.4.0",
+		"@tiptap/extension-list-item": "^2.4.0",
+		"@tiptap/extension-text-style": "^2.4.0",
+		"@tiptap/extension-underline": "^2.4.0",
+		"@tiptap/pm": "^2.4.0",
+		"@tiptap/react": "^2.4.0",
+		"@tiptap/starter-kit": "^2.4.0",
+		"ckeditor5": "^42.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
+		"dompurify": "^3.1.6",
 		"embla-carousel-react": "^8.0.2",
+		"html-react-parser": "^5.1.10",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.377.0",
 		"next": "14.2.3",
@@ -59,6 +65,7 @@
 		"react-email": "2.1.2",
 		"react-hook-form": "^7.51.3",
 		"react-icons": "^5.2.1",
+		"react-markdown": "^9.0.1",
 		"react-resizable-panels": "^2.0.19",
 		"resend": "^3.2.0",
 		"sonner": "^1.4.41",
@@ -68,6 +75,7 @@
 		"zod": "^3.23.5"
 	},
 	"devDependencies": {
+		"@types/dompurify": "^3.0.5",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
