refactor: update API keys and enhance email templates

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-RESEND_API_KEY=re_732KJ3em_21Vu3jkWV1ZtG22rxLcyYdAH
+PALMTECHNIQ_RESEND_API_KEY=re_732KJ3em_21Vu3jkWV1ZtG22rxLcyYdAH
+ISCE_RESEND_API_KEY = re_VhrYj8RP_BbZtWoTsSZFQ8m8dsKCu66g5
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 VERCEL_URL="http://localhost:9999"
