--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"react-markdown": "^9.0.1",
 		"react-resizable-panels": "^2.0.19",
 		"resend": "^3.2.0",
+		"sanitize-html": "^2.17.0",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -79,6 +80,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/sanitize-html": "^2.16.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
